--- a/practice.html
+++ b/practice.html
@@ -1,1 +1,11 @@
+<!DOCTYPE html>
+<html lang="kr">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+    <link href="style.css" rel="stylesheet" />
+  </head>
+  <body></body>
+</html>
 This is practice ? 됐나요? really? 확인 완료.
