--- a/practice.html
+++ b/practice.html
@@ -6,6 +6,10 @@
     <title>Document</title>
     <link href="style.css" rel="stylesheet" />
   </head>
-  <body></body>
+  <body>
+    <h1 id="title" class="btn">
+      This is practice ? 됐나요? really? 확인 완료.
+    </h1>
+    <script src="index.js"></script>
+  </body>
 </html>
-This is practice ? 됐나요? really? 확인 완료.
